// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditableInput > renders the component 1`] = `
"<div data-v-97845744=\\"\\" class=\\"editable-input\\">
  <p data-v-97845744=\\"\\">test</p><button data-v-97845744=\\"\\" type=\\"button\\" class=\\"v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
    <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\"><i class=\\"mdi-pencil-outline mdi v-icon notranslate v-theme--light v-icon--size-default\\" aria-hidden=\\"true\\"></i></span>
    <!---->
    <!---->
  </button>
</div>"
`;

exports[`EditableInput > should click on editable button 1`] = `
"<div data-v-97845744=\\"\\" class=\\"editable-input\\">
  <div data-v-97845744=\\"\\"><input type=\\"text\\"></div><button data-v-97845744=\\"\\" type=\\"button\\" class=\\"v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
    <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\"><i class=\\"mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default\\" aria-hidden=\\"true\\"></i></span>
    <!---->
    <!---->
  </button>
</div>"
`;
